<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_dob" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_email" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_phone" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Objectives"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/objective" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Key skills and Experience"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/design"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uml" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/programming"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/programmingSkills"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/db"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dbSkills" android:gravity="fill"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"></Space>
</LinearLayout>
