<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="CONTACT INFORMATION"
        android:textStyle="bold" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_email" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_phone" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_address" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_facebook" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_linkedin" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_twitter" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_instagram" />
</LinearLayout>
