<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PROFESSIONAL SKILLS"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skills" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PROFESSIONAL EXPERIENCE"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstJob" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Objectives"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_profession" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Projects"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Responsibility"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/responsibility" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secondJob" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Objectives"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_profession" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Projects"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Responsibility"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/responsibility" />

</LinearLayout>
