<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="EDUCATIONAL BACKGROUND"
        android:textStyle="bold" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/graduate" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/undergraduate" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highschool" />

</LinearLayout>
